# Sales-agent

./: .gitignore  README.md  main.py  pyproject.toml
data/calendar/: slots.json
data/crm/leads/: L-DEMO.json  L-LOW.json  L123.json
data/kb/: products.json
docs/: AI协作全过程日志.md  ai_iteration_log.md  eval_summary.md  prompt iteration.md  sales system prompt.md  test examples.md  tool use strategy.md  销售agent故障诊断与重构.md
evals/: sales_agent_eval_cases.xlsx  sales_cases.json
examples/: demo_request.json
sales_agent_harness/: cli.py  eval_runner.py  runner.py
sales_agent_harness/agent/: __init__.py  graph.py  prompt.py  state.py
sales_agent_harness/tools/: __init__.py  _db.py  calendar.py  crm.py  demo.py  handoff.py  knowledge.py  lead.py
scripts/: generate_eval_excel.py
src/sales_agent_harness/: __init__.py  agent.py  cli.py  eval_runner.py  langfuse_scoring.py  llm.py  models.py  prompts.py  service.py  tools.py
tests/: test_sales_agent.py
