[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-agent-harness"
version = "0.2.0"
description = "B2B sales agent harness: LangGraph ReAct agent with 6 file-backed tools, structured state, and eval runner."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
observability = ["langfuse>=2.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
sales-agent = "sales_agent_harness.cli:main"
sales-agent-eval = "sales_agent_harness.eval_runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sales_agent_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
